src/components/Navbar.css
.navbar{
    padding: 1.8rem 0;
    box-shadow: rgba(0,0,0,0.1) 0px 10px 15px -3px, rgba(0,0,0,0.05)  0px 4px 6px -2px ;
}

.navbar-brand span{
    margin-left: 0.1rem;
}

.brand{
    width: 100%;
}

.navbar-content{
    display: flex;
    width: 100%;
}

.navbar-fav-btn{
    margin-right: 1rem;
}

.nav-item{
    margin-bottom: 1.4rem;
}

.material-icons.md { 
    font-size: 28px; 
}
 
.counter {
    display: flex;
    align-items:flex-start;
    justify-content: center;
    width: 20px;
    height: 20px;
    background-color: var(--orange);
    color: var(--white);
    border-radius: 50%;
    font-size: 12px;
    margin-left: -2.0rem;
    margin-bottom: 2rem;
    z-index: 10;
  }
  

